--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ a{
   display: -ms-flexbox;  /* TWEENER - IE 10 */
   display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
   display: flex;
-
+  z-index: 9999;
 
 }
 
