--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ h5 {
   /*font-style: italic;
   */font-size: 15px;
 /*  color: #eeeadd;*/
-color: #9cafb7;
+color: #b8ccd4;
   line-height: 16px;
   float: left;
 
